Admins can stop their global sounds now and so can the players through handy dandy verbs

--- a/html/changelogs/Pomf123.yml
+++ b/html/changelogs/Pomf123.yml
@@ -1,2 +1,4 @@
 author: Pomf123
-changes: []
+changes:
+ - bugfix: Admin's stop all media verb now properly stops admin music from the local or global sound verb.
+ - rscadd: Players now have again the verb in OOC tab Stop Admin Music to stop any admin music playing.
