--- a/html/changelogs/Pomf123.yml
+++ b/html/changelogs/Pomf123.yml
@@ -1,2 +1,4 @@
 author: Pomf123
-changes: []
+changes:
+- tweak: Lowered the base cooldown on timestop.
+- tweak: Increased the base range of timestop by 2 tiles.
