adds comment to example changelog

--- a/html/changelogs/example.yml
+++ b/html/changelogs/example.yml
@@ -24,7 +24,7 @@
 # Your name.
 author: Ghost of N3X15
 
-# Optional: Remove this file after generating master changelog.  Useful for PR changelogs that won't get used again.
+# Optional: Remove this file after generating master changelog.  Useful for PR changelogs that won't get used again.  Do not use capitalization.
 delete-after: true
 
 # Any changes you've made.  See valid prefix list above.
