Explosions cause unanchored things to be thrown away from the epicenter given they're close enough.

--- a/html/changelogs/Pomf123.yml
+++ b/html/changelogs/Pomf123.yml
@@ -1,2 +1,3 @@
 author: Pomf123
-changes: []
+changes:
+- experiment: Explosions throw things away from the epicenter. May cause lag or may be buggy, lemme know.
