[DNM] Comment Out Changelog Tool in Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,8 @@ script:
 # Has to use Python 2 instead of 3 because else it won't find colorama.
 - python tools/travis/check_map_files.py maps/
 - find -name '*.dme' -exec cat {} \; | awk '/maps\\test.*/ { exit 1 }'
-- python tools/changelog/ss13_genchangelog.py html/changelog.html html/changelogs --dry-run
+# Python 2 is EOL but travis chokes on Python 3 for a wide variety of reasons.
+#- python tools/changelog/ss13_genchangelog.py html/changelog.html html/changelogs --dry-run
 - source $HOME/BYOND-${BYOND_MAJOR}.${BYOND_MINOR}/byond/bin/byondsetup
 - cd libvg
 # --jobs 1 to prevent threading problems with the BYOND crate.
