--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
   global:
   - BYOND_MAJOR="512"
   - BYOND_MINOR="1453"
-  - ALL_MAPS="bagelstation defficiency dorffort dorfstation metaclub packedstation roidstation rust_test snaxi test_asteroid test_box test_empty test_tiny tgstation tgstation-sec tgstation-snow vgstation wheelstation"
+  - ALL_MAPS="bagelstation defficiency dorfstation metaclub packedstation roidstation snaxi test_box test_tiny tgstationc wheelstation"
   - RUST_BACKTRACE="1"
   - RUST_TEST_THREADS=1
   matrix:
