--- a/.travis.yml
+++ b/.travis.yml
@@ -81,7 +81,7 @@ jobs:
         # --jobs 1 to prevent threading problems with the BYOND crate.
         - cargo test --jobs 1 --verbose
         - cd -
-        - tools/travis/build.py &>&1 | tee /dev/stderr | sponge | awk '/warning|error/ { exit 1 }'
+        - tools/travis/build.py 2>&1 | tee /dev/stderr | sponge | awk '/warning|error/ { exit 1 }'
         - cp tools/travis/config/config.txt config/
         - tools/travis/run_tests.py 2>&1 | tee /dev/stderr | sponge | awk '/UNIT TEST FAIL/ { exit 1 }'
 
