--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,10 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+env:
+  BYOND_MAJOR: 513
+  BYOND_MINOR: 1523
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   lint:
@@ -35,8 +39,6 @@ jobs:
 
       - name: Compile all maps
         run: |
-          export BYOND_MAJOR="513"
-          export BYOND_MINOR="1523"
           export ALL_MAPS="tgstation metaclub defficiency packedstation roidstation nrvhorizon test_box test_tiny snaxi tgstation-sec LampreyStation xoq boxesstation synergy bagelstation"
           export DM_UNIT_TESTS="0"
           tools/travis/install-byond.sh
@@ -44,8 +46,6 @@ jobs:
           tools/travis/build.py
       - name: Compile and test
         run: |
-           export BYOND_MAJOR="513"
-           export BYOND_MINOR="1523"
            export DM_UNIT_TESTS="1"
            tools/travis/install-byond.sh
            source $HOME/BYOND-${BYOND_MAJOR}.${BYOND_MINOR}/byond/bin/byondsetup
