--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,9 @@ jobs:
         run: python3 tools/travis/check_map_files.py maps/
 
       - name: Validhunt DMIs
-        run: python3 tools/dmi-validhunt/dmi-validhunt.py icons/ || true
+        run: |
+          pip install pil
+          python3 tools/dmi-validhunt/dmi-validhunt.py icons/ || true
 
       - name: Make sure test maps aren't ticked
         run: find -name '*.dme' -exec cat {} \; | awk '/maps\\test.*/ { exit 1 }'
