--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
       - uses: actions/cache@v2
         name: Cache BYOND installation
         with:
-          path: ${{env.HOME}}/BYOND-${{env.BYOND_MAJOR}}.${{env.BYOND_MINOR}}
+          path: ~/BYOND-${{env.BYOND_MAJOR}}.${{env.BYOND_MINOR}}
           key: BYOND-${{runner.os}}-${{env.BYOND_MAJOR}}.${{env.BYOND_MINOR}}
 
       - name: ${{matrix.job-name}}
