--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Validhunt DMIs
         run: |
           pip install Pillow
-          python3 tools/dmi-validhunt/dmi-validhunt.py icons/ || true
+          python tools/dmi-validhunt/dmi-validhunt.py icons/ || true
 
       - name: Make sure test maps aren't ticked
         run: find -name '*.dme' -exec cat {} \; | awk '/maps\\test.*/ { exit 1 }'
